--- a/doc/examples/osmo-trx-ipc/osmo-trx-ipc.cfg
+++ b/doc/examples/osmo-trx-ipc/osmo-trx-ipc.cfg
@@ -11,8 +11,8 @@ log stderr
 line vty
  no login
 !
-cpu-sched
- policy rr 18
+!cpu-sched
+! policy rr 18
 trx
  bind-ip 127.0.0.1
  remote-ip 127.0.0.1
